@@ -5,6 +5,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		
+		<!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KY2CTTZXHG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-KY2CTTZXHG');
+    </script>
 	</head>
 	<body class="is-preload">
 
